[package]
name = "lobster"
version = "0.7.0"
authors = ["Michele Lacchia <michelelacchia@gmail.com>"]
edition = "2018"
license = "ISC"

readme = "README.md"
description = "A fast limit order book (LOB)"
documentation = "https://docs.rs/lobster"
homepage = "https://github.com/rubik/lobster"
repository = "https://github.com/rubik/lobster"
keywords = ["orderbook", "order", "limit", "hft"]

[badges]
coveralls = { repository = "rubik/lobster" }
travis-ci = { repository = "rubik/lobster" }

[dependencies]
fxhash = "0.2.1"
mimalloc = { version = "*", default-features = false }
speedy = "0.8.6"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
csv = "1.1"
serde = { version = "1", features = ["derive"] }

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
incremental = false
overflow-checks = false
rpath = false
lto = "fat"
panic = "abort"
codegen-units = 1

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
incremental = false
overflow-checks = false
rpath = false
lto = "fat"
codegen-units = 1

[[bench]]
name = "simple"
harness = false

[[bench]]
name = "quantcup"
harness = false

